# taskrift

./: .coverage  .gitignore  LICENSE  README.md  coverage.xml  pyproject.toml
taskrift/: __init__.py  __main__.py  cli.py  config.py  database.py  taskrift.py
tests/: test_taskrift.py
