[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src", from = "src"}]

[tool.poetry.dependencies]
python = "3.11.2"
typer = {extras = ["all"], version = "0.9.0"}
pytest = "7.3.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
